--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../profile_pic.jpeg") no-repeat center center fixed;
+  background: url("https://ahosovidaho.github.io/profile_pic.jpeg") no-repeat center center fixed;
   background-size: cover;
   z-index: -2;
 }
